springmongo-app/templates/destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: default
spec:
  host: frontend
  subsets:
    - name: v1
      labels:
        app: frontend
        version: v1
    - name: v2
      labels:
        app: frontend
        version: v2
